--- a/public/css/styleTableau.css
+++ b/public/css/styleTableau.css
@@ -3,7 +3,7 @@
     margin-left: 5%;
 }
 thead tr {
-    background-color: midnightblue;
+    background-color: #3792E5;
     color: #fff;
     text-align: left;
 }
