--- a/public/css/styleTableauJoueur.css
+++ b/public/css/styleTableauJoueur.css
@@ -3,7 +3,7 @@
     margin-left: 55%;
 }
 thead tr {
-    background-color: blue;
+    background-color: #3792E5;
     color: #fff;
     text-align: left;
 }
